# scannerlib

./: .gitignore  CMakeLists.txt
include/: scannerlib.h
src/: CMakeLists.txt  scannerlib.c
test/: CMakeLists.txt  test1.c
